# libsrtp

./: .gitignore  CMakeLists.txt  Makefile.in  config_in.h  configure  configure.ac
crypto/cipher/: aes_gcm_nss.c  aes_gcm_ossl.c  aes_icm.c  aes_icm_nss.c  aes_icm_ossl.c  aes_kw_nss.c  cipher.c  double.c
crypto/hash/: auth.c  sha1.c
crypto/include/: aes_gcm.h  aes_kw.h  auth.h  cipher_types.h  crypto_types.h  datatypes.h
crypto/kernel/: crypto_kernel.c  err.c
crypto/test/: cipher_driver.c  stat_driver.c
include/: ekt.h  srtp.h  srtp_priv.h
libsrtp_rs/: Cargo.toml  TODO.md
libsrtp_rs/src/: aes.rs  aes_gcm.rs  aes_icm.rs  crypto_kernel.rs  crypto_test.rs  hmac.rs  kdf.rs  key_limit.rs  lib.rs  null_auth.rs  null_cipher.rs  policy.rs  replay.rs  rtp_header.rs  sha1.rs  sha1_c.rs  srtp.rs  ut_sim.rs  util.rs
libsrtp_rs/src/c/: aes.rs  alloc.rs  auth.rs  cipher.rs  crypto_kernel.rs  err.rs  key_limit.rs  mod.rs  replay.rs  sha1.rs  srtp.rs
srtp/: ekt.c  srtp.c
test/: dtls_srtp_driver.c  ekt_driver.c  rdbx_driver.c  rtp_decoder.c  rtpw.c  srtp_driver.c  vector_driver.c
