[package]
name = "libsrtp_rs"
version = "0.1.0"
authors = ["Richard Barnes <rlb@ipv.sx>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.test]
opt-level = 0
debug = true

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.3"

[dependencies]
libc = "0.2.93"            # Only until we can get rid of src/c/alloc.rs
num_enum = "0.5.1"         # For enum conversion to C values
cstr = "0.2.8"             # For C string constants
cpu-time = "1.0.0"         # For cipher performance testing in C interface
rand = "0.8.3"             # For rand_for_tests functions
packed_struct = "0.5"      # For RTP header parsing
constant_time_eq = "0.1.5" # For auth tag checking
